--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
     Gulp and send to the /css folder which is then loaded on the page.
 */body{font-family:'Lato', sans-serif;font-size:16px}
 body.active{overflow:hidden;z-index:-1}.no-js #experience-timeline>
-div ul{font-size:0.9em;font-weight:300;color:#74808a;}
+div ul{font-size:0.9em;color:#74808a;}
 div{background:#fff;padding:10px;margin-bottom:10px;border:1px solid #dcd9d9}.no-js #experience-timeline>
 div h3{font-size:1.5em;font-weight:300;color:#374054;display:inline-block;margin:0}.no-js #experience-timeline>
 div h4{font-size:1.2em;font-weight:300;color:#7e8890;margin:0 0 15px 0}.no-js #experience-timeline>
